Alteraçao na dinamica do javascript e pequena mudança visual

--- a/MODULOS/SEÇÃO-TUTORIAL/AbaTutoriais.html
+++ b/MODULOS/SEÇÃO-TUTORIAL/AbaTutoriais.html
@@ -25,10 +25,10 @@
 
 <body>
     <header class="top-bar">
-        <div class="top-buttons">
-            <img class="logo" src="imagens/Logo-Site.jpg" alt="">
-            <button class="home" onclick="voltarHome()">Home</button>
-        </div>
+    <div class="top-buttons">
+    <img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site" onclick="voltarHome()" style="cursor: pointer;">
+</div>
+
         <h1>Tutoriais</h1>
         <p>Vídeos gravados com o tutorial para dúvidas nas plataformas e o seu PDF</p>
     </header>
