--- a/MODULOS/SEÇÃO-TUTORIAL/AbaTutoriais.html
+++ b/MODULOS/SEÇÃO-TUTORIAL/AbaTutoriais.html
@@ -25,18 +25,24 @@
 
 <body>
     <header class="top-bar">
-    <div class="top-buttons">
-    <img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site" onclick="voltarHome()" style="cursor: pointer;">
-</div>
+        <div class="top-buttons">
+            <img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site" onclick="voltarHome()"
+                style="cursor: pointer;">
+        </div>
 
         <h1>Tutoriais</h1>
         <p>Vídeos gravados com o tutorial para dúvidas nas plataformas e o seu PDF</p>
     </header>
 
     <main class="cards-container" id="cardsContainer">
-        
-    </main>
 
+    </main>
+    <div id="videoModal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <iframe id="videoFrame" width="320" height="180" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
