concertado o erro no script.js

--- a/MODULOS/COMENTARIOS/public/index.html
+++ b/MODULOS/COMENTARIOS/public/index.html
@@ -27,8 +27,7 @@
       <img src="cancelar.png" />
       <h1>HISTORICO DE COMENTARIOS</h1>
     </div>
-
-    </section>
+      <section class="comentarios-lista"></section>
   </div>
 
   <script src="script.js"></script>
