--- a/codigo/public/modulos/carrossel/carrosel.html
+++ b/codigo/public/modulos/carrossel/carrosel.html
@@ -136,6 +136,17 @@
     <section class="features">
         <!--final carrosel-->
     </section>
+
     <main>
         <script src="app.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+        <script>
+  const toggle = document.querySelector('.menu-toggle');
+  const menuList = document.querySelector('.menu ul');
+
+  toggle.addEventListener('click', () => {
+    menuList.classList.toggle('show');
+  });
+</script>
