--- a/MODULOS/jogo da memoria/jogadamemoria.html
+++ b/MODULOS/jogo da memoria/jogadamemoria.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Jogo da Memória</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="jogodamemoria.css">
 </head>
 <body>
     <div class="container">
