--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,57 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-
   <div class="container">
     <h1>Jogo da Memória</h1>
+
     <p id="timer">Tempo restante: 04:00</p>
-      <div>
-    <label for="nome">Digite seu nome:</label>
-    <input type="text" id="nome" placeholder="Seu nome" />
-    <button onclick="salvarPontuacao()">Salvar Pontuação</button>
-  </div>
 
-  <p id="score">Pontos: 0</p>
-  <p id="timer">Tempo restante: 04:00</p>
-  <div id="game-board"></div>
+    <div>
+      <label for="nome">Digite seu nome:</label>
+      <input type="text" id="nome" placeholder="Seu nome" />
+      <button onclick="salvarPontuacao()">Salvar Pontuação</button>
+    </div>
 
-  <h2>Ranking</h2>
-  <div id="ranking">Carregando...</div>
-    <div id="game-board" class="game-board"></div>
     <p id="score">Pontos: 0</p>
- <p id="melhor-pontuacao">Melhor pontuação: 0</p>
+    <p id="melhor-pontuacao">Melhor pontuação: 0</p>
+
+    <div id="game-board" class="game-board"></div>
+
+    <h2>Ranking</h2>
+    <div id="ranking">Carregando...</div>
   </div>
 
-<audio id="success-sound" src="sounds/acerto.mp3"></audio>
+  <!-- Sons de acerto e erro -->
+  <audio id="success-sound" src="sounds/acerto.mp3"></audio>
   <audio id="error-sound" src="sounds/erro.mp3"></audio>
-</div>
+
+  <!-- Música de fundo -->
+  <audio id="background-music" src="sounds/musica-fundo.mp3" loop></audio>
+  <button id="toggle-music">🔈 Música</button>
+
   <script src="script.js"></script>
+
+  <!-- Controle da música de fundo -->
+  <script>
+    const backgroundMusic = document.getElementById("background-music");
+    const toggleButton = document.getElementById("toggle-music");
+
+    window.addEventListener("DOMContentLoaded", () => {
+      backgroundMusic.volume = 0.2;
+      backgroundMusic.play().catch(() => {
+        // O navegador pode bloquear autoplay
+      });
+    });
+
+    toggleButton.addEventListener("click", () => {
+      if (backgroundMusic.paused) {
+        backgroundMusic.play();
+        toggleButton.textContent = "🔈 Música";
+      } else {
+        backgroundMusic.pause();
+        toggleButton.textContent = "🔇 Música";
+      }
+    });
+  </script>
 </body>
 </html>
