--- a/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
+++ b/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="password-container">
         <div class="header-container">
@@ -21,12 +19,11 @@
 
         <div class="password-card">
             <div class="service-logo">
-                <i class="fas fa-university"></i>
+                <i class="fas fa-key"></i>
             </div>
             <div class="service-info">
                 <div class="service-name">Banco 1</div>
-                <div class="service-description">Lorem ipsum dolor sit amet, consectetur semipuvuecoe soe titorciar
-                </div>
+                <div class="service-description">Lorem ipsum dolor sit amet, consectetur semipuvuecoe soe titorciar</div>
             </div>
             <div class="password-section">
                 <div class="password masked">••••••••</div>
@@ -38,47 +35,8 @@
                 </button>
             </div>
         </div>
-        <div class="password-card">
-            <div class="service-logo">
-                <i class="fas fa-university"></i>
-            </div>
-            <div class="service-info">
-                <div class="service-name">Banco 2 </div>
-                <div class="service-description">Lorem ipsum dolor sit amet, consectetur semipuvuecoe soe titorciar
-                </div>
-            </div>
-            <div class="password-section">
-                <div class="password masked">••••••••</div>
-                <button class="action-btn reveal" title="Mostrar senha">
-                    <i class="fas fa-eye"></i>
-                </button>
-                <button class="action-btn delete" title="Excluir senha">
-                    <i class="fas fa-trash-alt"></i>
-                </button>
-            </div>
-        </div>
-        <div class="password-card">
-            <div class="service-logo">
-                <i class="fas fa-university"></i>
-            </div>
-            <div class="service-info">
-                <div class="service-name">INSS</div>
-                <div class="service-description">Lorem ipsum dolor sit amet, consectetur semipuvuecoe soe titorciar
-                </div>
-            </div>
-            <div class="password-section">
-                <div class="password masked">••••••••</div>
-                <button class="action-btn reveal" title="Mostrar senha">
-                    <i class="fas fa-eye"></i>
-                </button>
-                <button class="action-btn delete" title="Excluir senha">
-                    <i class="fas fa-trash-alt"></i>
-                </button>
-            </div>
-        </div>
-
-
     </div>
+
     <div id="addModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -96,19 +54,10 @@
                     <label for="password">Senha:</label>
                     <input type="password" id="password" required>
                 </div>
-                <div class="form-group">
-                    <label for="platform">Plataforma:</label>
-                    <select id="platform">
-                        <option value="plataforma y">plataforma y</option>
-                        <option value="plataforma z">plataforma z</option>
-                        <option value="outros">Outros</option>
-                    </select>
-                </div>
                 <button type="submit">Salvar</button>
             </form>
         </div>
     </div>
     <script src="app.js"></script>
 </body>
-
 </html>
