--- a/codigo/public/modulos/caça-palavras/index.html
+++ b/codigo/public/modulos/caça-palavras/index.html
@@ -16,7 +16,7 @@
     <main>
         <section class="procura-palavras">
             <h1 class="levelTitle">Nivel - 2</h1>
-            <div class="containerCacaPalavras"></div>
+            <div id="containerCacaPalavras"></div>
         </section>
         <section class="lista-palavras">
             <h1 class="listTitle">Palavras</h1>
