--- a/codigo/public/modulos/quiz/index.html
+++ b/codigo/public/modulos/quiz/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz - Pergunta 1</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="quiz.js"></script>
 </head>
 <body>
   <div class="container">
@@ -32,5 +33,6 @@
       <button class="next-button">PRÓXIMO</button>
     </footer>
   </div>
+
 </body>
 </html>
