--- a/codigo/public/modulos/quiz/public/index.html
+++ b/codigo/public/modulos/quiz/public/index.html
@@ -1,38 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz - Pergunta 1</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="quiz.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Quiz de Segurança Digital</title>
+  <link rel="stylesheet" href="quiz.css" />
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>QUIZ</h1>
-    </header>
-
-    <section class="question-box">
-      <h2>PERGUNTA 1</h2>
-      <p class="question-text">
-        Pergunta teste: para entrar na sua conta do Google, qual ícone abaixo o senhor(a) tem que clicar para ver os seus emails no celular?
-      </p>
-    </section>
-
-    <div class="options-grid">
-      <button class="icon-button"></button>
-      <button class="icon-button"></button>
-      <button class="icon-button"></button>
-      <button class="icon-button"></button>
-      <button class="icon-button"></button>
-      <button class="icon-button"></button>
-    </div>
-
-    <footer>
-      <button class="next-button">PRÓXIMO</button>
-    </footer>
-  </div>
-
+  <div class="container"></div>
+  <script src="quiz.js"></script>
 </body>
 </html>
