--- a/codigo/public/modulos/jogo da memoria/jogo da memoria/public/jogadamemoria.html
+++ b/codigo/public/modulos/jogo da memoria/jogo da memoria/public/jogadamemoria.html
@@ -24,31 +24,32 @@
 
       <div id="game-board" class="game-board"></div>
     </div>
-<div class="ranking-wrapper">
-  <h2>Rankings</h2>
-  <div class="ranking-container">
-    <div class="ranking-box">
-      <h3>Ranking Pontuação</h3>
-      <div id="ranking">Carregando...</div>
+
+    <div class="ranking-wrapper">
+      <h2>Rankings</h2>
+      <div class="ranking-container">
+        <div class="ranking-box">
+          <h3>Ranking Pontuação</h3>
+          <div id="ranking">Carregando...</div>
+        </div>
+
+        <div class="ranking-box">
+          <h3>Ranking por Erros</h3>
+          <div id="ranking-erros">Carregando...</div>
+        </div>
+
+        <div class="ranking-box">
+          <h3>Ranking por Tempo</h3>
+          <div id="ranking-tempo">Carregando...</div>
+        </div>
+      </div>
     </div>
-
-    <div class="ranking-box">
-      <h3>Ranking por Erros</h3>
-      <div id="ranking-erros">Carregando...</div>
-    </div>
-  </div>
-</div>
-
-
-
   </div>
 
   <audio id="success-sound" src="sounds/acerto.mp3"></audio>
   <audio id="error-sound" src="sounds/erro.mp3"></audio>
   <audio id="background-music" src="sounds/musica-fundo.mp3" loop></audio>
   <button id="toggle-music">🔈 Música</button>
-
-</body>
 
   <script>
     const backgroundMusic = document.getElementById("background-music");
@@ -81,17 +82,21 @@
     let firstCard = null;
     let lock = false;
     let timerInterval;
+    let tempoRestante = 240;
 
     async function carregarRanking() {
       try {
         const res = await fetch("http://localhost:3000/ranking");
         const data = await res.json();
+
         const rankingDiv = document.getElementById("ranking");
         const rankingErrosDiv = document.getElementById("ranking-erros");
+        const rankingTempoDiv = document.getElementById("ranking-tempo");
 
         if (!data.length) {
           rankingDiv.innerText = "Nenhuma pontuação registrada ainda.";
           rankingErrosDiv.innerText = "Nenhum dado de erros.";
+          rankingTempoDiv.innerText = "Nenhum dado de tempo.";
           return;
         }
 
@@ -108,14 +113,23 @@
             `<p>${i + 1}. ${item.nome} - ${item.erros} erro(s)</p>`
           ).join("");
 
+        let tempoHTML = data
+          .filter(item => typeof item.tempo === "number")
+          .sort((a, b) => a.tempo - b.tempo)
+          .map((item, i) =>
+            `<p>${i + 1}. ${item.nome} - ${item.tempo}s</p>`
+          ).join("");
+
         rankingHTML += `<p><strong>Melhor pontuação local:</strong> ${localStorage.getItem("bestScore") || 0}</p>`;
 
         rankingDiv.innerHTML = rankingHTML;
         rankingErrosDiv.innerHTML = errosHTML || "Sem dados de erros ainda.";
+        rankingTempoDiv.innerHTML = tempoHTML || "Sem dados de tempo ainda.";
       } catch (err) {
         console.error("Erro ao carregar ranking:", err);
         document.getElementById("ranking").innerText = "Erro ao carregar ranking.";
         document.getElementById("ranking-erros").innerText = "Erro ao carregar ranking de erros.";
+        document.getElementById("ranking-tempo").innerText = "Erro ao carregar ranking de tempo.";
       }
     }
 
@@ -221,17 +235,17 @@
 
     function startTimer(duration) {
       let timerDisplay = document.getElementById("timer");
-      let time = duration;
+      tempoRestante = duration;
       clearInterval(timerInterval);
       timerInterval = setInterval(() => {
-        let minutes = String(Math.floor(time / 60)).padStart(2, "0");
-        let seconds = String(time % 60).padStart(2, "0");
+        let minutes = String(Math.floor(tempoRestante / 60)).padStart(2, "0");
+        let seconds = String(tempoRestante % 60).padStart(2, "0");
         timerDisplay.innerText = `Tempo restante: ${minutes}:${seconds}`;
-        if (time <= 0) {
+        if (tempoRestante <= 0) {
           clearInterval(timerInterval);
           alert("Tempo esgotado! Sua pontuação foi: " + score);
         }
-        time--;
+        tempoRestante--;
       }, 1000);
     }
 
@@ -242,10 +256,18 @@
         return;
       }
 
+      const tempoGastoAtual = 240 - tempoRestante;
+
       fetch("http://localhost:3000/ranking", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ nome, pontuacao: score, erros }),
+        body: JSON.stringify({
+          nome,
+          pontuacao: score,
+          erros,
+          tempo: tempoGastoAtual,
+          data: new Date().toISOString().split("T")[0]
+        }),
       })
       .then(res => {
         if (!res.ok) throw new Error("Erro ao salvar pontuação");
