--- a/codigo/public/modulos/caca-palavras/index.html
+++ b/codigo/public/modulos/caca-palavras/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="caça-palavras.js"></script>
+    <script src="caca-palavras.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,24 +14,13 @@
         <a href="#"><button>Voltar</button></a>
     </nav>
     <main>
+        <section class="lista-palavras">
+            <h1 class="listTitle">Palavras</h1>
+            <ul id="listWords"></ul>
+        </section>
         <section class="procura-palavras">
             <h1 class="levelTitle">Nivel - 2</h1>
             <div id="containerCacaPalavras"></div>
-        </section>
-        <section class="lista-palavras">
-            <h1 class="listTitle">Palavras</h1>
-            <ul class="listWords">
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-                <li>lorem</li>
-            </ul>
         </section>
     </main>
 </body>
