Adaptação do código para o uso do json server e inclusão de outros niveis

--- a/codigo/public/modulos/caca-palavras/index.html
+++ b/codigo/public/modulos/caca-palavras/index.html
@@ -19,7 +19,7 @@
             <ul id="listWords"></ul>
         </section>
         <section class="procura-palavras">
-            <h1 class="levelTitle">Nivel - 2</h1>
+            <h1 id="levelTitle"></h1>
             <div id="containerCacaPalavras"></div>
         </section>
     </main>
