--- a/codigo/public/modulos/caca-palavras/index.html
+++ b/codigo/public/modulos/caca-palavras/index.html
@@ -20,6 +20,10 @@
         </section>
         <section class="procura-palavras">
             <h1 id="levelTitle"></h1>
+            <div id="infoJogo">
+                <p>Tempo: <span id="cronometro">00:00</span></p>
+                <p>Pontuação: <span id="pontuacao">100</span></p>
+            </div>
             <div id="containerCacaPalavras"></div>
         </section>
     </main>
