--- a/codigo/public/modulos/aba-rankings/rankingpage.html
+++ b/codigo/public/modulos/aba-rankings/rankingpage.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Ranking</title>
+    
+</head>
+<h1>Rankings</h1>
 
+  <div class="podium">
+    <div class="second">
+      <img src="avatar2.jpg" alt="Segundo lugar" class="avatar">
+      <strong>Simas</strong>
+      <span>12 pontos</span>
+    </div>
+    <div class="first">
+      <img src="avatar1.jpg" alt="Primeiro lugar" class="avatar">
+      <strong>Felipe Neto</strong>
+      <span>12 pontos</span>
+    </div>
+    <div class="third">
+      <img src="avatar3.jpg" alt="Terceiro lugar" class="avatar">
+      <strong>Neymar</strong>
+      <span>11 pontos</span>
+    </div>
+  </div>
+
+  <div class="ranking-list">
+    <ol start="4">
+      <li>Maria - 10 pontos</li>
+      <li>Lucas - 9 pontos</li>
+      <li>Fernanda - 9 pontos</li>
+      <li>Paulo - 8 pontos</li>
+      <li>Ana - 7 pontos</li>
+      <li>Rafaela - 7 pontos</li>
+      <li>Leonardo - 6 pontos</li>
+    </ol>
+    <button class="btn-ver-mais">Ver mais</button>
+  </div>    
+</body>
+</html>
