--- a/codigo/public/modulos/aba-rankings/rankingpage.html
+++ b/codigo/public/modulos/aba-rankings/rankingpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ranking</title>
-    
+     <link rel="stylesheet" href="style.css">
 </head>
 <h1>Rankings</h1>
 
