Alteraçoes no carrousel

--- a/codigo/public/modulos/carrossel/carrosel.html
+++ b/codigo/public/modulos/carrossel/carrosel.html
@@ -19,10 +19,10 @@
             <h1>Envelhecer Digital</h1>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#" onclick="window.open('detalhes-tutoriais.html', '_blank')">Tutoriais</a></li>
-                <li><a href="#" onclick="window.open('detalhes-jogos1.html', '_blank')">Jogos</a></li>
-                <li><a href="#" onclick="window.open('detalhes-conquistas.html', '_blank')">Conquistas</a></li>
+              <li><a href="../index.html">Home</a></li>
+  <li><a href="../secaodetutorial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+  <li><a href="#" onclick="window.open('detalhes-jogos1.html', '_blank')">Conquistas</a></li>
+  <li><a href="aba-gerenciar-senhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
                 <style>
                     .menu a {
                         position: relative;
@@ -62,13 +62,13 @@
     <div class="carousel">
 
         <div class="list">
-            <div class="item" style="background-image: url(imgs/senhascarrosel.png);">
+            <div class="item" style="background-image: url(imgs/qcardquiz.png);">
 
                 <div class="content">
-                    <div class="title">Senhas </div>
-                    <div class="name">Seguras</div>
-                    <div class="des">Neste jogo interativo e educativo, os jogadores aprendem, de forma simples e
-                        divertida, como criar senhas fortes e seguras para proteger suas contas na internet..</div>
+                    <div class="title">Caça </div>
+                    <div class="name">Palavras</div>
+                    <div class="des">  Neste jogo interativo e educativo, os jogadores aprendem, de forma simples e divertida, 
+    a reconhecer palavras, melhorar o vocabulário e estimular a memória, com temas da internet</div>
                     <div class="btn">
                         <button onclick="verDetalhes(1)">Veja mais</button>
                         <button onclick="window.open('detalhes-jogos.html?jogo=1', '_blank')">Jogar</button>
@@ -98,14 +98,13 @@
                 </div>
 
             </div>
-            <div class="item" style="background-image: url(imgs/jogogmail.png);">
+            <div class="item" style="background-image: url(imgs/quizz.png);">
 
                 <div class="content">
-                    <div class="title">Simulador</div>
-                    <div class="name">Email</div>
-                    <div class="des"> O Simulador de E-mail Seguro é um jogo educativo criado especialmente para ajudar
-                        idosos a entender como funcionam os e-mails e como identificar mensagens perigosas, como golpes
-                        e tentativas de fraude.
+                    <div class="title">Você  </div>
+                    <div class="name">Sabia?</div>
+                    <div class="des">   Neste desafio interativo, os participantes testam seus conhecimentos sobre tecnologia de forma leve e divertida. 
+    São perguntas simples e objetivas, pensadas especialmente para o público idoso.
 
                     </div>
                     <div class="btn">
