--- a/codigo/public/modulos/carrossel/detalhes-jogos.html
+++ b/codigo/public/modulos/carrossel/detalhes-jogos.html
@@ -20,19 +20,19 @@
       2: {
         titulo: "Jogo da Memória",
         imagem: "imgs/jogomemoriacard.png",
-        descricao: "Desafie sua memória encontrando os pares corretos!",
+        descricao: "Prepare sua mente e teste sua memoria!",
         link: "https://exemplo.com/memoria"
       },
       3: {
-        titulo: "Jogo Simulador Email",
-        imagem: "imgs/jogoemailcard.png",
-        descricao: "Teste seus conhecimentos em uso do gmail",
+        titulo: "Quiz de Conhecimentos",
+        imagem: "imgs/carddoquiz.png",
+        descricao: "Teste seus conhecimentos com o nosso quiz com 10 perguntas!",
         link: "https://exemplo.com/velha"
       },
       1: {
-        titulo: "Adivinhe a Senha Segura",
-        imagem: "imgs/senhascard.png",
-        descricao: "Teste suas habilidades tentando adivinhar senhas fortes e descubra como criar combinações seguras!",
+        titulo: "Caça Palaras Digital", 
+        imagem: "imgs/caça palavras.png",
+        descricao: "Caça palavras com vários níveis, prepare-se!",
         link: "https://exemplo.com/senhas"
       }
     };
