Integraçao dos codigos

--- a/codigo/public/modulos/carrossel/carrosel.html
+++ b/codigo/public/modulos/carrossel/carrosel.html
@@ -20,9 +20,9 @@
 
             <ul>
               <li><a href="../index.html">Home</a></li>
-  <li><a href="../secaodetutorial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
-  <li><a href="#" onclick="window.open('detalhes-jogos1.html', '_blank')">Conquistas</a></li>
-  <li><a href="aba-gerenciar-senhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+  <li><a href="../secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+  <li><a href="../aba-rankings/rankingpage.html" target="_blank">Conquistas</a></li>
+  <li><a href="../aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
                 <style>
                     .menu a {
                         position: relative;
