Integração do cadastro de jogos com o caca-palavras

--- a/codigo/public/caca-palavras.html
+++ b/codigo/public/caca-palavras.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/caca-palavras.css" />
     <title>Caça-Palavras</title>
-    <script src="caca-palavras.js" defer></script>
+    <script src="assets/js/caca-palavras.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
-        <a href="#"><img src="img/logo.jpg" alt="Logo" /></a>
+        <a href="#"><img src="assets/images/logo.jpg" alt="Logo" /></a>
         <h1>Caça-Palavras</h1>
         <a href="#"><button>Voltar</button></a>
     </nav>
