--- a/codigo/public/cadastro_jogos.html
+++ b/codigo/public/cadastro_jogos.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Contatos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/cadastro_jogos.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <nav class="navbar">
         <a class="navbar-brand" href="#">
-            <img src="img/logo.jpg" alt="img Logo" />
+            <img src="assets/images/logo.jpg" alt="img Logo" />
         </a>
 
 
@@ -271,7 +271,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="assets/js/cadastro_jogos.js"></script>
 </body>
 
 </html>
