layout do index html pronto

--- a/codigo/public/AbasecaoHistoria.html
+++ b/codigo/public/AbasecaoHistoria.html
@@ -168,6 +168,14 @@ Em todos os casos, é fundamental garantir a segurança com o uso de senhas fort
       <img src="https://via.placeholder.com/80" alt="João Vitor Porto Lorencini">
       <div class="name">João Vitor Porto Lorencini</div>
       <div class="role">Desenvolvedor</div>
+ <div class="container">
+    <div class="card">
+      <img src="https://via.placeholder.com/80" alt="Anthony">
+      <div class="name">Caio</div>
+      <div class="role">Desenvolvedor</div>
+    </div>
+
+
     </div>
   </div>
 </body>
