--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -25,17 +25,26 @@
 <body>
 
   <!-- Cabeçalho com Menu -->
-  <header>
-    <nav class="menu">
-      <h1>Envelhecer Digital</h1>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="../secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
-        <li><a href="../aba-rankings/rankingpage.html" target="_blank">Conquistas</a></li>
-        <li><a href="../aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <nav class="menu">
+    <h1>Envelhecer Digital</h1>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="modulos/secaodetuturial/" target="_blank">Tutoriais</a></li>
+      <li><a href="modulos/Comquistas/index.html" target="_blank">Conquistas</a></li>
+      <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+    </ul>
+  </nav>
+</header>
+
+
+
+
 
 
 
@@ -63,7 +72,7 @@
         </div>
 
         <!-- Item 2 -->
-        <div class="item" style="background-image: url(assets/images/jogodamemoria.png);">
+        <div class="item" style="background-image: url(assets/images/jogodamemoriacarrosel.png);">
           <div class="content">
             <div class="title">Memória</div>
             <div class="name">Digital</div>
@@ -73,7 +82,7 @@
             </div>
             <div class="btn">
              
-              <button onclick="window.open('detalhes-jogos.html?jogo=2', '_blank')">Jogar</button>
+              <button onclick="window.open('public/assets/carrosel/detalhes-jogos.html?jogo=2', '_blank')">Jogar</button>
             </div>
           </div>
         </div>
@@ -84,9 +93,9 @@
             <div class="title">Você</div>
             <div class="name">Sabia?</div>
             <div class="des">
-              Neste desafio interativo, os <br>participantes testam seus<br> conhecimentos sobre a<br>  tecnologia  de forma leve<br>  e
+              Neste desafio interativo, você testa seus conhecimentos sobre tecnologia  de forma leve e
               divertida.
-              São perguntas <br>  simples  e objetivas, pensadas <br>  especialmente para o você <br>  que quer aprender mais<br>  sobre o mundo digital.
+              São perguntas  simples  e objetivas, pensadas  especialmente para quem quer aprender mais sobre o mundo digital.
             </div>
             <div class="btn">
       
@@ -155,7 +164,7 @@
 
   <body>
 
-    <h1>Proteção na internet</h1>
+    <h1>Se Projeteja  na Internet</h1>
 
     <div class="cards-container">
 
@@ -314,6 +323,9 @@
         </div>
       </div>
     </div>
+
+
+    <h1>Deixe Aqui o seu Comentario </h1>
     <section class="comentario">
       <div class="comentarios-wrapper">
         <div class="comentario-conteiner">
