Colocando detalhes na pagina principal

--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="btn">
              
-              <button onclick="window.open('public/assets/carrosel/detalhes-jogos.html?jogo=2', '_blank')">Jogar</button>
+             <button onclick="window.open('detalhes-jogos.html?jogo=2', '_blank')">Jogar</button>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="btn">
       
-              <button onclick="window.open('modulos/carroseel/detalhes-jogos.html?jogo=3', '_blank')">Jogar</button>
+              <button onclick="window.open('detalhes-jogos.html?jogo=3', '_blank')">Jogar</button>
             </div>
           </div>
         </div>
