--- a/codigo/public/detalhes-jogos.html
+++ b/codigo/public/detalhes-jogos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Detalhes do Jogo</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/cssdetalhes-jogos.css">
 </head>
 
 <body>
@@ -19,21 +19,21 @@
     const jogos = {
       2: {
         titulo: "Jogo da Memória",
-        imagem: "imgs/jogomemoriacard.png",
+        imagem: "assets/images/jogomemoriacard.png",
         descricao: "Prepare sua mente e teste sua memoria!",
-        link: "https://exemplo.com/memoria"
+        link: "modulos/jogo-da-memoria/public/index.html"
       },
       3: {
         titulo: "Quiz de Conhecimentos",
-        imagem: "imgs/carddoquiz.png",
-        descricao: "Teste seus conhecimentos com o nosso quiz com 10 perguntas!",
-        link: "https://exemplo.com/velha"
+        imagem: "assets/images/carddoquiz.png",
+        descricao: "Teste seus conhecimentos com o nosso quiz de 10 perguntas!",
+        link: "modulos/quiz/public/index.html"
       },
       1: {
         titulo: "Caça Palaras Digital", 
-        imagem: "imgs/caça palavras.png",
-        descricao: "Caça palavras com vários níveis, prepare-se!",
-        link: "https://exemplo.com/senhas"
+        imagem: "assets/images/caça palavras.png",
+        descricao: "Caça palavras com vários níveis!",
+        link: "modulos/caca-palavras/public/index.html"
       }
     };
 
