Integração do jogo da memoria com o login e com o reso das funcionalidades

--- a/codigo/public/detalhes-jogos.html
+++ b/codigo/public/detalhes-jogos.html
@@ -21,7 +21,7 @@
         titulo: "Jogo da Memória",
         imagem: "assets/images/jogomemoriacard.png",
         descricao: "Prepare sua mente e teste sua memoria!",
-        link: "modulos/jogo-da-memoria/public/index.html"
+        link: "jogodamemoria.html"
       },
       3: {
         titulo: "Quiz de Conhecimentos",
@@ -33,7 +33,7 @@
         titulo: "Caça Palaras Digital", 
         imagem: "assets/images/caça palavras.png",
         descricao: "Caça palavras com vários níveis!",
-        link: "modulos/caca-palavras/public/index.html"
+        link: "caca-palavras.html"
       }
     };
 
@@ -59,7 +59,4 @@
   </script>
   
 </body> 
-
-
-
 </html>
