--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="./assets/css/comentarios.css">
 
 
-
   <!-- Scripts com defer (carregam depois do HTML) -->
   <script src="./assets/js/carrossel.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="./assets/js/login.js" defer></script>
 </head>
 
 <body>
@@ -35,9 +35,10 @@
     </div>
     <ul id="menu-list">
       <li><a href="./index.html">Home</a></li>
-      <li><a href="modulos/secaodetuturial/" target="_blank">Tutoriais</a></li>
+      <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
       <li><a href="modulos/Comquistas/index.html" target="_blank">Conquistas</a></li>
       <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
     </ul>
   </nav>
 </header>
