--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -76,6 +76,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/scripts/login.js"></script>
+  <script src="./assets/js/login.js"></script>
 </body>
 </html>
