Conserto do caminho da página de conquistas na home page

--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -36,7 +36,7 @@
     <ul id="menu-list">
       <li><a href="./index.html">Home</a></li>
       <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
-      <li><a href="modulos/Comquistas/index.html" target="_blank">Conquistas</a></li>
+      <li><a href="conquistas.html" target="_blank">Conquistas</a></li>
       <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
       <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
     </ul>
