adicionado a paagina sobre alem de alguns ajuste na index

--- a/codigo/public/detalhes-jogos.html
+++ b/codigo/public/detalhes-jogos.html
@@ -27,7 +27,7 @@
         titulo: "Quiz de Conhecimentos",
         imagem: "assets/images/carddoquiz.png",
         descricao: "Teste seus conhecimentos com o nosso quiz de 10 perguntas!",
-        link: "modulos/quiz/public/index.html"
+        link: "quiz.html"
       },
       1: {
         titulo: "Caça Palaras Digital", 
