--- a/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
+++ b/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
@@ -6,28 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutoriais</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .video-thumb {
-            width: 100%;
-            max-width: 320px;
-            height: 180px;
-            object-fit: cover;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .video-thumb:hover {
-            transform: scale(1.03);
-        }
-    </style>
 </head>
 
 <body>
     <header class="top-bar">
         <div class="top-buttons">
-            <img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site" onclick="voltarHome()"
-                style="cursor: pointer;">
+            <a href="http://localhost:3000/index.html"><img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site" ></a>
+           
         </div>
 
         <h1>Tutoriais</h1>
