--- a/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
+++ b/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
@@ -1,63 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Senhas</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gerenciador de Senhas</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="password-container">
-        <div class="header-container">
-            <h1>Gerenciar Senhas</h1>
-            <button class="add-btn" id="addNewCard">
-                <i class="fas fa-plus"></i>
-                Adicionar
-            </button>
-        </div>
+  <div class="password-container">
+    <header class="header-container">
+      <h1>Gerenciar Senhas</h1>
+      <button class="add-btn" id="addNewCard" aria-label="Adicionar nova senha">
+        <i class="fas fa-plus"></i> Adicionar
+      </button>
+    </header>
+    <main id="passwordList"></main>
+  </div>
 
-        <div class="password-card">
-            <div class="service-logo">
-                <i class="fas fa-key"></i>
-            </div>
-            <div class="service-info">
-                <div class="service-name">Banco 1</div>
-                <div class="service-description">Lorem ipsum dolor sit amet, consectetur semipuvuecoe soe titorciar</div>
-            </div>
-            <div class="password-section">
-                <div class="password masked">••••••••</div>
-                <button class="action-btn reveal" title="Mostrar senha">
-                    <i class="fas fa-eye"></i>
-                </button>
-                <button class="action-btn delete" title="Excluir senha">
-                    <i class="fas fa-trash-alt"></i>
-                </button>
-            </div>
+  <div id="addModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+    <div class="modal-content">
+      <span class="close" role="button" aria-label="Fechar modal">&times;</span>
+      <h2 id="modalTitle">Adicionar Nova Senha</h2>
+      <form id="passwordForm">
+        <input type="hidden" id="editId" />
+        <div class="form-group">
+          <label for="serviceName">Nome do Serviço:</label>
+          <input type="text" id="serviceName" required />
         </div>
-    </div>
-
-    <div id="addModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Adicionar Nova Senha</h2>
-            <form id="passwordForm">
-                <div class="form-group">
-                    <label for="serviceName">Nome do Serviço:</label>
-                    <input type="text" id="serviceName" required>
-                </div>
-                <div class="form-group">
-                    <label for="serviceDescription">Descrição:</label>
-                    <input type="text" id="serviceDescription">
-                </div>
-                <div class="form-group">
-                    <label for="password">Senha:</label>
-                    <input type="password" id="password" required>
-                </div>
-                <button type="submit">Salvar</button>
-            </form>
+        <div class="form-group">
+          <label for="serviceDescription">Descrição:</label>
+          <input type="text" id="serviceDescription" />
         </div>
+        <div class="form-group">
+          <label for="password">Senha:</label>
+          <input type="password" id="password" required />
+        </div>
+        <button type="submit" class="submit-btn">Salvar</button>
+      </form>
     </div>
-    <script src="app.js"></script>
+  </div>
+  <!-- Seu JavaScript -->
+  <script src="app.js"></script>
 </body>
 </html>
