--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./assets/css/login.css" />
 </head>
 <body>
-  <div id="login">
-    <h3 class="text-center text-white pt-5">Novo Usuário</h3>
-    <div class="container">
-      <div id="login-row" class="row justify-content-center align-items-center">
-        <div id="login-column" class="col-md-6">
-          <div id="login-box" class="col-md-12">
-            <form id="login-form" class="form" method="post">
-              <h3 class="text-center text-info">Login</h3>
-              <div class="form-group">
-                <label for="username" class="text-info">Usuário</label><br>
-                <input type="text" name="username" id="username" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="password" class="text-info">Senha</label><br>
-                <input type="password" name="password" id="password" class="form-control">
-              </div>
-              <div class="form-group text-right">
-                <input type="submit" name="submit" class="btn btn-info btn-md" value="Entrar">
-              </div>
-            </form>
-          </div>
-          <button type="button" class="btn btn-info" id="openModalBtn">Novo usuário</button>
-        </div>
+  <div class="login-card">
+    <h2>Acesse sua conta<br>com facilidade</h2>
+    <img src="./assets/images/ChatGPT Image 22 de jun. de 2025, 21_02_49.png" alt="Pessoa com tablet" class="illustration">
+
+    <form id="login-form" class="form" method="post">
+      <div class="form-group">
+        <input type="text" name="username" id="username" class="form-control" placeholder="Email ou nome de usuário">
       </div>
+      <div class="form-group password-wrapper">
+        <input type="password" name="password" id="password" class="form-control" placeholder="Senha">
+        <span class="toggle-password" onclick="togglePassword()">Mostrar</span>
+      </div>
+      <input type="submit" name="submit" class="btn btn-primary" value="Entrar">
+    </form>
+
+    <div class="text-link">
+      <a href="#">Esqueceu a senha?</a>
+    </div>
+    <div class="text-link">
+      <a href="#" id="openModalBtn">+ Criar conta</a>
     </div>
   </div>
 
@@ -46,24 +43,19 @@
           <form id="new-user-form">
             <h3 class="text-center text-info">Novo usuário</h3>
             <div class="form-group">
-              <label for="txt_login" class="text-info">Usuário</label><br>
-              <input type="text" name="txt_login" id="txt_login" class="form-control">
+              <input type="text" name="txt_login" id="txt_login" class="form-control" placeholder="Usuário">
             </div>
             <div class="form-group">
-              <label for="txt_nome" class="text-info">Nome completo</label><br>
-              <input type="text" name="txt_nome" id="txt_nome" class="form-control">
+              <input type="text" name="txt_nome" id="txt_nome" class="form-control" placeholder="Nome completo">
             </div>
             <div class="form-group">
-              <label for="txt_email" class="text-info">Email</label><br>
-              <input type="email" name="txt_email" id="txt_email" class="form-control">
+              <input type="email" name="txt_email" id="txt_email" class="form-control" placeholder="Email">
             </div>
             <div class="form-group">
-              <label for="txt_senha" class="text-info">Senha</label><br>
-              <input type="password" name="txt_senha" id="txt_senha" class="form-control">
+              <input type="password" name="txt_senha" id="txt_senha" class="form-control" placeholder="Senha">
             </div>
             <div class="form-group">
-              <label for="txt_senha2" class="text-info">Confirmação de Senha</label><br>
-              <input type="password" name="txt_senha2" id="txt_senha2" class="form-control">
+              <input type="password" name="txt_senha2" id="txt_senha2" class="form-control" placeholder="Confirme a senha">
             </div>
           </form>
         </div>
