Melhoramento css( aba tutoriais)

--- a/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
+++ b/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
@@ -9,15 +9,21 @@
 </head>
 
 <body>
-    <header class="top-bar">
-        <div class="top-buttons">
-            <a href="http://localhost:3000/index.html"><img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site" ></a>
-           
-        </div>
+<header class="top-bar">
+  <div class="top-buttons">
+    <a href="http://localhost:3000/index.html">
+      <img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site">
+    </a>
+  </div>
 
-        <h1>Tutoriais</h1>
-        <p>Vídeos gravados com o tutorial para dúvidas nas plataformas e o seu PDF</p>
-    </header>
+  <h1>Tutoriais</h1>
+   <div class="sobre-texto">
+          <p>
+  O projeto <strong>Envelhecer Digital</strong> oferece uma série de tutoriais simples e acessíveis, especialmente desenvolvidos para pessoas idosas. Nosso objetivo é facilitar o aprendizado das tecnologias do dia a dia, com vídeos, materiais em PDF e jogos educativos, para que você possa usar seus dispositivos com segurança, confiança e autonomia. Queremos tornar o mundo digital um lugar mais amigável, inclusivo e divertido para todos!
+</p>
+
+        </div>
+</header>
 
     <main class="cards-container" id="cardsContainer">
 
