--- a/codigo/public/sobre.html
+++ b/codigo/public/sobre.html
@@ -151,19 +151,19 @@
                     <div class="nome">Fábio Garcia</div>
                     <div class="funcao">Desenvolvedor</div>
                     <div class="redes">
-                        <a href="#" title="Instagram" target="_blank">
+                        <a href="https://www.instagram.com/fabiogmartins06/" title="Instagram" target="_blank">
                             <img src="./assets/images/instagram.png" alt="" srcset="">
                         </a>
-                        <a href="#" title="LinkedIn" target="_blank">
+                        <a href="https://www.linkedin.com/in/fabio-garcia-martins-b98747346 " title="LinkedIn" target="_blank">
                             <svg viewBox="0 0 448 512"><path d="M100.28 448H7.4V148.9h92.88zm-46.44-340.7C24.09 107.3 0 83.2 0 53.6A53.6 53.6 0 0 1 53.6 0a53.6 53.6 0 0 1 53.6 53.6c0 29.6-24.09 53.7-53.36 53.7zM447.8 448h-92.4V302.4c0-34.7-12.4-58.4-43.3-58.4-23.6 0-37.6 15.9-43.7 31.3-2.3 5.6-2.8 13.4-2.8 21.2V448h-92.4s1.2-241.1 0-266.1h92.4v37.7c12.3-19 34.3-46.1 83.5-46.1 60.9 0 106.6 39.8 106.6 125.4V448z"/></svg>
                         </a>
-                        <a href="#" title="GitHub" target="_blank">
+                        <a href="https://github.com/Fabiogarcia02" title="GitHub" target="_blank">
                             <img src="./assets/images/github.jpg" alt="" srcset="">
                         </a>
                     </div>
                 </div>
                 <div class="card-img">
-                    <img src="./assets/images/fabio.jpg" alt="Fábio Garcia">
+                    <img src="./assets/images/fabio.png" alt="Fábio Garcia">
                 </div>
             </div>
             <div class="card">
@@ -228,7 +228,7 @@
             </div>
             <div class="card">
                 <div class="card-info">
-                    <div class="nome">Seu Nome Aqui</div>
+                    <div class="nome">Caio Leal</div>
                     <div class="funcao">Desenvolvedor</div>
                     <div class="redes">
                       <a href="#" title="Instagram" target="_blank">
@@ -237,13 +237,13 @@
                         <a href="#" title="LinkedIn" target="_blank">
                             <svg viewBox="0 0 448 512"><path d="M100.28 448H7.4V148.9h92.88zm-46.44-340.7C24.09 107.3 0 83.2 0 53.6A53.6 53.6 0 0 1 53.6 0a53.6 53.6 0 0 1 53.6 53.6c0 29.6-24.09 53.7-53.36 53.7zM447.8 448h-92.4V302.4c0-34.7-12.4-58.4-43.3-58.4-23.6 0-37.6 15.9-43.7 31.3-2.3 5.6-2.8 13.4-2.8 21.2V448h-92.4s1.2-241.1 0-266.1h92.4v37.7c12.3-19 34.3-46.1 83.5-46.1 60.9 0 106.6 39.8 106.6 125.4V448z"/></svg>
                         </a>
-                        <a href="#" title="GitHub" target="_blank">
+                        <a href="" title="GitHub" target="_blank">
                             <img src="./assets/images/github.jpg" alt="" srcset="">
                         </a>
                     </div>
                 </div>
                 <div class="card-img">
-                    <img src="https://via.placeholder.com/80" alt="Seu Nome Aqui">
+                    <img src="assets/images/caio.png" alt="Seu Nome Aqui">
                 </div>
             </div>
         </div>
