--- a/codigo/public/modulos/carrossel/carrosel.html
+++ b/codigo/public/modulos/carrossel/carrosel.html
@@ -19,10 +19,10 @@
             <h1>Envelhecer Digital</h1>
 
             <ul>
-              <li><a href="../index.html">Home</a></li>
-  <li><a href="../secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
-  <li><a href="../aba-rankings/rankingpage.html" target="_blank">Conquistas</a></li>
-  <li><a href="../aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+                <li><a href="../aba-rankings/rankingpage.html" target="_blank">Conquistas</a></li>
+                <li><a href="../aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
                 <style>
                     .menu a {
                         position: relative;
@@ -67,8 +67,9 @@
                 <div class="content">
                     <div class="title">Caça </div>
                     <div class="name">Palavras</div>
-                    <div class="des">  Neste jogo interativo e educativo, os jogadores aprendem, de forma simples e divertida, 
-    a reconhecer palavras, melhorar o vocabulário e estimular a memória, com temas da internet</div>
+                    <div class="des"> Neste jogo interativo e educativo, os jogadores aprendem, de forma simples e
+                        divertida,
+                        a reconhecer palavras, melhorar o vocabulário e estimular a memória, com temas da internet</div>
                     <div class="btn">
                         <button onclick="verDetalhes(1)">Veja mais</button>
                         <button onclick="window.open('detalhes-jogos.html?jogo=1', '_blank')">Jogar</button>
@@ -93,7 +94,7 @@
                         <button onclick="window.open('detalhes-jogos.html?jogo=2', '_blank')">Jogar</button>
 
 
-                        
+
                     </div>
                 </div>
 
@@ -101,10 +102,11 @@
             <div class="item" style="background-image: url(imgs/quizz.png);">
 
                 <div class="content">
-                    <div class="title">Você  </div>
+                    <div class="title">Você </div>
                     <div class="name">Sabia?</div>
-                    <div class="des">   Neste desafio interativo, os participantes testam seus conhecimentos sobre tecnologia de forma leve e divertida. 
-    São perguntas simples e objetivas, pensadas especialmente para o público idoso.
+                    <div class="des"> Neste desafio interativo, os participantes testam seus conhecimentos sobre
+                        tecnologia de forma leve e divertida.
+                        São perguntas simples e objetivas, pensadas especialmente para o público idoso.
 
                     </div>
                     <div class="btn">
@@ -142,10 +144,10 @@
 
 
         <script>
-  const toggle = document.querySelector('.menu-toggle');
-  const menuList = document.querySelector('.menu ul');
+            const toggle = document.querySelector('.menu-toggle');
+            const menuList = document.querySelector('.menu ul');
 
-  toggle.addEventListener('click', () => {
-    menuList.classList.toggle('show');
-  });
-</script>
+            toggle.addEventListener('click', () => {
+                menuList.classList.toggle('show');
+            });
+        </script>
