--- a/codigo/public/detalhes-jogos.html
+++ b/codigo/public/detalhes-jogos.html
@@ -5,9 +5,27 @@
   <meta charset="UTF-8" />
   <title>Detalhes do Jogo</title>
   <link rel="stylesheet" href="assets/css/cssdetalhes-jogos.css">
+<link rel="stylesheet" href="assets/css/carrosel.css">
 </head>
 
 <body>
+  <header>
+  <nav class="menu">
+    <h1>Envelhecer Digital</h1>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+      <li><a href="conquistas.html" target="_blank">Conquistas</a></li>
+      <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
+    </ul>
+  </nav>
+</header>
   <div id="jogo-container">
     <h1 id="titulo"></h1>
     <img id="imagem" src="" alt="" style="max-width:200px" />
