--- a/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
+++ b/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
@@ -6,8 +6,25 @@
   <title>Gerenciador de Senhas</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
-</head>
+<link rel="stylesheet" href="../../assets/css/carrosel.css"></head>
 <body>
+  <header>
+  <nav class="menu">
+    <h1>Envelhecer Digital</h1>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+      <li><a href="conquistas.html" target="_blank">Conquistas</a></li>
+      <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
+    </ul>
+  </nav>
+</header>
   <div class="password-container">
     <header class="header-container">
       <h1>Gerenciar Senhas</h1>
