--- a/codigo/public/modulos/jogo da memoria/jogo da memoria/public/jogodamemoria.html
+++ b/codigo/public/modulos/jogo da memoria/jogo da memoria/public/jogodamemoria.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8" />
   <title>Memória Digital</title>
   <link rel="stylesheet" href="jogodamemoria.css" />
-</head>
+<link rel="stylesheet" href="../../../assets/css/carrosel.css"></head>
 <body>
+  <header>
+  <nav class="menu">
+    <h1>Envelhecer Digital</h1>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+      <li><a href="conquistas.html" target="_blank">Conquistas</a></li>
+      <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
+    </ul>
+  </nav>
+</header>
   <div class="main-wrapper">
     <!-- Tabela Completa à esquerda -->
     <div class="tabela-wrapper">
