--- a/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
+++ b/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
@@ -6,27 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutoriais</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../assets/css/carrosel.css">
 </head>
 
 <body>
-<header class="top-bar">
-  <div class="top-buttons">
-    <a href="http://localhost:3000/index.html">
-      <img class="logo" src="imagens/Logo-Site.jpg" alt="Logo do site">
-    </a>
-  </div>
-
-  <h1>Tutoriais</h1>
-   <div class="sobre-texto">
-          <p>
-  O projeto <strong>Envelhecer Digital</strong> oferece uma série de tutoriais simples e acessíveis, especialmente desenvolvidos para pessoas idosas. Nosso objetivo é facilitar o aprendizado das tecnologias do dia a dia, com vídeos, materiais em PDF e jogos educativos, para que você possa usar seus dispositivos com segurança, confiança e autonomia. Queremos tornar o mundo digital um lugar mais amigável, inclusivo e divertido para todos!
-</p>
-
-        </div>
+<header>
+  <nav class="menu">
+    <h1>Envelhecer Digital</h1>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+      <li><a href="conquistas.html" target="_blank">Conquistas</a></li>
+      <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
+    </ul>
+  </nav>
 </header>
-
     <main class="cards-container" id="cardsContainer">
-
+     <h1>Tutoriais</h1>
     </main>
     <div id="videoModal" class="modal">
         <div class="modal-content">
