--- a/codigo/public/quiz.html
+++ b/codigo/public/quiz.html
@@ -5,8 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quiz de Segurança Digital</title>
   <link rel="stylesheet" href="assets/css/quiz.css" />
+  <link rel="stylesheet" href="assets/css/carrosel.css">
 </head>
 <body>
+  <header>
+  <nav class="menu">
+    <h1>Envelhecer Digital</h1>
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./modulos/secaodetuturial/AbaTutoriais.html" target="_blank">Tutoriais</a></li>
+      <li><a href="conquistas.html" target="_blank">Conquistas</a></li>
+      <li><a href="modulos/aba-gerenciarsenhas/gerenciarsehas.html" target="_blank">Suas Senhas</a></li>
+      <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
+    </ul>
+  </nav>
+</header>
   <div class="container"></div>
   <script src="assets/js/quiz.js"></script>
 </body>
