Alteraçoes css independencia digital

--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -114,7 +114,7 @@
       <section class="secao-independencia-digital">
 
         <div class="bloco-imagem-ilustrativa">
-          <img src="https://tm.ibxk.com.br//2022/06/28/28144353758431.jpg" alt="Idoso usando tecnologia"
+          <img src="https://img.freepik.com/vetores-premium/homem-idoso-indigena-australiano-contando-historias_1238364-94944.jpg?ga=GA1.1.1227016704.1750728766&semt=ais_hybrid&w=740" alt="Idoso usando tecnologia"
             class="imagem-ilustrativa">
         </div>
 
@@ -148,71 +148,61 @@
       </div>
   </section>
 
-  <title>Como se proteger na internet</title>
-  </head>
-
   <body>
 
-  <h1 style="margin-bottom:  55px;">Se Proteja na Internet</h1>
+  <h1 class="protecao-titulo">Se Proteja na Internet</h1>
 
-    <div class="cards-container">
+  <div class="protecao-cards-container">
 
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/locker_53876-25496.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740"
-          alt="Pessoa pensando">
-        <div class="card-content">
-          <h2>Use senhas fortes</h2>
-          <ul>
-            <li>Crie senhas com letras, números e símbolos.</li>
-            <li>Evite usar datas de nascimento ou nomes fáceis.</li>
-            <li>Anote suas senhas em um local seguro, se precisar.</li>
-          </ul>
-        </div>
+    <div class="protecao-card">
+      <img src="https://img.freepik.com/free-vector/locker_53876-25496.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740" alt="Pessoa pensando">
+      <div class="protecao-card-content">
+        <h2>Use senhas fortes</h2>
+        <ul>
+          <li>Crie senhas com letras, números e símbolos.</li>
+          <li>Evite usar datas de nascimento ou nomes fáceis.</li>
+          <li>Anote suas senhas em um local seguro, se precisar.</li>
+        </ul>
       </div>
+    </div>
 
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/speech-bubble-pack_24877-57088.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740"
-          alt="Pessoa em alerta">
-        <div class="card-content">
-          <h2>Cuidado com mensagens falsas</h2>
-          <ul>
-            <li>Desconfie de mensagens com ofertas muito boas.</li>
-            <li>Nunca clique em links de desconhecidos.</li>
-            <li>Se tiver dúvida, peça ajuda a alguém de confiança.</li>
-          </ul>
-        </div>
+    <div class="protecao-card">
+      <img src="https://img.freepik.com/free-vector/speech-bubble-pack_24877-57088.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740" alt="Pessoa em alerta">
+      <div class="protecao-card-content">
+        <h2>Cuidado com mensagens falsas</h2>
+        <ul>
+          <li>Desconfie de mensagens com ofertas muito boas.</li>
+          <li>Nunca clique em links de desconhecidos.</li>
+          <li>Se tiver dúvida, peça ajuda a alguém de confiança.</li>
+        </ul>
       </div>
+    </div>
 
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/security-shield-cog_78370-7883.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740"
-          alt="Pessoa digitando">
-        <div class="card-content">
-          <h2>Proteja suas informações</h2>
-          <ul>
-            <li>Evite informar CPF, endereço ou número de documentos.</li>
-            <li>Não compartilhe senhas com outras pessoas.</li>
-            <li>Em sites de compras, veja se o endereço começa com "https".</li>
-          </ul>
-        </div>
+    <div class="protecao-card">
+      <img src="https://img.freepik.com/free-vector/security-shield-cog_78370-7883.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740" alt="Pessoa digitando">
+      <div class="protecao-card-content">
+        <h2>Proteja suas informações</h2>
+        <ul>
+          <li>Evite informar CPF, endereço ou número de documentos.</li>
+          <li>Não compartilhe senhas com outras pessoas.</li>
+          <li>Em sites de compras, veja se o endereço começa com "https".</li>
+        </ul>
       </div>
+    </div>
 
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/open-email-envelope_1020-530.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740"
-          alt="Pessoa protegida">
-        <div class="card-content">
-          <h2>Use segurança extra</h2>
-          <ul>
-            <li>Ative a verificação em duas etapas no celular e e-mail.</li>
-            <li>Isso ajuda a proteger sua conta mesmo se a senha for descoberta.</li>
-            <li>Peça ajuda para configurar, se tiver dificuldade.</li>
-          </ul>
-        </div>
+    <div class="protecao-card">
+      <img src="https://img.freepik.com/free-vector/open-email-envelope_1020-530.jpg?ga=GA1.1.947296198.1743958736&semt=ais_hybrid&w=740" alt="Pessoa protegida">
+      <div class="protecao-card-content">
+        <h2>Use segurança extra</h2>
+        <ul>
+          <li>Ative a verificação em duas etapas no celular e e-mail.</li>
+          <li>Isso ajuda a proteger sua conta mesmo se a senha for descoberta.</li>
+          <li>Peça ajuda para configurar, se tiver dificuldade.</li>
+        </ul>
       </div>
+    </div>
 
+  </div>
     </div>
 <section class="ajuda-familiar">
   <div class="ajuda-conteudo">
