Ajuste sonoro jogo-memoria

--- a/codigo/public/jogodamemoria.html
+++ b/codigo/public/jogodamemoria.html
@@ -65,9 +65,9 @@
       </div>
     </div>
   </div>
-  <audio id="success-sound" src="sounds/acerto.mp3"></audio>
-  <audio id="error-sound" src="sounds/erro.mp3"></audio>
-  <audio id="background-music" src="sounds/musica-fundo.mp3" loop></audio>
+  <audio id="success-sound" src="modulos/jogo da memoria/jogo da memoria/public/sounds/acerto.mp3"></audio>
+  <audio id="error-sound" src="modulos/jogo da memoria/jogo da memoria/public/sounds/erro.mp3"></audio>
+  <audio id="background-music" src="modulos/jogo da memoria/jogo da memoria/public/sounds/musica-fundo.mp3" loop></audio>
   <button id="toggle-music">🔈 Música</button>
   <script src="assets/js/jogodamemoria.js"></script>
 </body>
